AirBnB clone - Web static

--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -4,8 +4,9 @@ footer {
     width: 100%;
     border-top: 1px solid #CCCCCC;
     bottom: 0; 
-    position: absolute;
-    bottom: auto;
+    position: fixed;
+    align-items: center;
+    display: grid;
 }
 
 footer p{
