--- a/web_static/styles/102-footer.css
+++ b/web_static/styles/102-footer.css
@@ -2,13 +2,10 @@ footer {
     background-color: white;
     height: 60px;
     width: 100%;
-    border-top: 1px solid #CCCCCC;
+    position: fixed;
     bottom: 0;
+    border-top: 1px solid #cccccc;
+    display: flex;
     align-items: center;
-    display: grid;
-}
-
-footer p{
-    text-align: center;
-    margin: 20px;
-}
+    justify-content: center;
+  }
